# vectorization

./: CMakeLists.txt  README.md  exampleDoPri5.cc
include/: DormandPrince745.hh  DormandPrince745.icc  MagUsualEquation.hh  MagUsualEquation.icc  VDormandPrince745.hh  VDormandPrince745.icc  VMagUsualEquation.hh  VMagUsualEquation.icc  aliases.hh
src/: VDormandPrince745.cc  VMagUsualEquation.cc
